--- a/exercise4/exercise4.css
+++ b/exercise4/exercise4.css
@@ -1,5 +1,9 @@
 h1 {
-  color: red;
+  color:#024601;
   background-color: #00ff00;
 }
-#bluebackround
+p {
+  color:#123456;
+  background-color: #d4d4d4;
+}
+#bluebackground
