--- a/assignment4/assignment4.css
+++ b/assignment4/assignment4.css
@@ -21,7 +21,7 @@ a:hover {
 }
 body{
   font-family: sans-serif;
-  background-image: url(images/DSC_0036.jpg);
+  background-image: url(images/DSC_0036.JPG);
 }
 .textcenter{
   text-align: center;
