--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -3,10 +3,8 @@ body {
 }
 
 #wrapper {
-  margin: 24px auto;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-column-gap: 24px;
 }
 header{
   background-color: #2f3340;
@@ -54,4 +52,11 @@ Footer{
   padding: 10px;
   font-weight: bold;
   font-family: "courier";
+}
+.slideshow{
+  margin-left: 120px;
+  margin-right: 120px;
+  grid-column: span 12;
+  width: initial;
+  background-color: red;
 }
