--- a/Portfolio/sub1/sub1.css
+++ b/Portfolio/sub1/sub1.css
@@ -23,6 +23,8 @@ h1{
     color: white;
     font-family: "courier";
     font-weight: normal;
+    display: inline-flex;
+    margin-bottom: 20px;
 }
 nav{
   text-align: center;
@@ -63,18 +65,8 @@ Footer{
 }
 footer a {
   color: white;
+  transition: color 0.25s;
 }
 Footer a:hover{
   color: #7d7d8c;
-}
-.slideshow{
-  margin-top: 10px;
-  width: 1100px;
-  margin-left: 50px;
-  margin-right: 50px;
-  grid-column: span 12;
-  border-radius: 10px;
-}
-img{
-  Height:500px
 }
